--- a/templates/propiedades/propiedades.html
+++ b/templates/propiedades/propiedades.html
@@ -35,5 +35,12 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Botón volver -->
+    <div class="mt-4">
+        <a href="{% url 'dashboard_admin' %}" class="btn btn-secondary w-100 py-3">
+            ⬅️ Volver al Dashboard
+        </a>
+    </div>
 </div>
 {% endblock %}
