--- a/templates/pqr/mi-lista.html
+++ b/templates/pqr/mi-lista.html
@@ -47,5 +47,12 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Botón volver -->
+    <div class="mt-4">
+        <a href="{% url 'perfil' %}" class="btn btn-secondary w-100 py-3">
+            ⬅️ Volver al Perfil
+        </a>
+    </div>
 </div>
 {% endblock %}
