--- a/templates/usuarios/dashboard_ciudadano.html
+++ b/templates/usuarios/dashboard_ciudadano.html
@@ -14,7 +14,7 @@
                 <div class="card-body text-center">
                     <h5 class="card-title">🏠 Mis Propiedades</h5>
                     <p class="card-text">Consulta tus propiedades registradas.</p>
-                    <a href="{% url 'lista_propiedades' %}" class="btn btn-blue-mid w-100">Ver propiedades</a>
+                    <a href="{% url 'mis_propiedades' %}" class="btn btn-blue-mid w-100">Ver propiedades</a>
                 </div>
             </div>
         </div>
