--- a/templates/pqr/lista.html
+++ b/templates/pqr/lista.html
@@ -36,5 +36,28 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Paginación -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if pqr_list.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ pqr_list.previous_page_number }}">Anterior</a>
+                </li>
+            {% endif %}
+
+            <li class="page-item disabled">
+                <span class="page-link">
+                    Página {{ pqr_list.number }} de {{ pqr_list.paginator.num_pages }}
+                </span>
+            </li>
+
+            {% if pqr_list.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ pqr_list.next_page_number }}">Siguiente</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 </div>
 {% endblock %}
