--- a/templates/reportes/dashboard_agente.html
+++ b/templates/reportes/dashboard_agente.html
@@ -151,4 +151,13 @@
         {% endfor %}
     </tbody>
 </table>
+
+<hr>
+
+<!-- Botón para ver usuarios insistentes -->
+<div class="mt-4 text-center">
+    <a href="{% url 'lista_insistentes' %}" class="btn btn-danger w-50 py-3">
+        👀 Ver usuarios insistentes
+    </a>
+</div>
 {% endblock %}
